# xmsg-cpp

./: .editorconfig  .gitignore  .mailmap  .travis.yml  CMakeLists.txt  LICENSE  README.md  configure
.travis/: install.sh
cmake/: xmsg-config.cmake.in
cmake/Modules/: Findzmq.cmake
doc/: CMakeLists.txt  Doxyfile.in  get_cppreference_tags.cmake  mainpage.dox
include/xmsg/: address.h  connection.h  connection_pool.h  connection_setup.h  constants.h  context.h  message.h  proxy.h  subscription.h  topic.h  util.h  xmsg.h
include/xmsg/proto/: data.h  meta.h  registration.h
src/core/: CMakeLists.txt  address.cpp  connection.cpp  connection_driver.cpp  connection_driver.h  connection_impl.h  connection_pool.cpp  connection_setup.cpp  context.cpp  proxy.cpp  regdis.cpp  regdis.h  registration_driver.cpp  registration_driver.h  subscription.cpp  thread_local.h  topic.cpp  util.cpp  xmsg.cpp  zhelper.cpp  zhelper.h
src/proto/: CMakeLists.txt  data.h  data.proto  meta.h  meta.proto  registration.h  registration.proto
src/sys/: CMakeLists.txt  cx_proxy.cpp  xmsg_proxy.cpp
test/core/: CMakeLists.txt  connection_pool_test.cpp  context_test.cpp  message_test.cpp  regdis_test.cpp  registrar_test.cpp  subscription_test.cpp  topic_test.cpp  util_test.cpp  zhelper_test.cpp
test/core/helper/: proxy_wrapper.h  registration.h  utils.h
test/perf/: CMakeLists.txt  README  local_thr.cpp  remote_thr.cpp
